feat: add header html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../img/favicon (1).ico" type="image/x-icon">
     <title>Resume</title>
 </head>
 <body>
-    
+    <header class="header">
+        <nav class="navigation">
+            <ul class="links">
+                <li> <a href="#about">About</a></li>
+                <li> <a href="#info">Contacts</a></li>
+                <li> <a href="#lang">Languages</a></li>
+                <li> <a href="#ex">Experience</a></li>
+                <li> <a href="#course_1">Courses</a></li>
+                <li> <a href="#attainments">Skills</a></li>
+                <li> <a href="#educate">Education</a></li>
+                <li> <a href="#pro">Projects</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
