feat: add footer

--- a/index.html
+++ b/index.html
@@ -21,5 +21,18 @@
             </ul>
         </nav>
     </header>
+    <footer>
+        <div class="footer">
+         <div class="date">
+         <p>2023</p>
+         </div>
+         <div class="name_footer">
+          <p>Irina Shaporova</p>
+         </div>
+         <div class="link">
+          <p><img src="img/github.svg" alt="github" class="icon"><a href="https://github.com/Iris-ka23">My github</a></p>
+         </div>
+        </div>
+    </footer>
 </body>
 </html>
