feat: add code section1

--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
         </nav>
     </header>
 
+    <main class="contanier">
+        <section class="section_1">
+            <div class="photo">
+                <img src="./img/photo_1.ico" alt="My photo">
+            </div>
+            <div class="name">
+                <h1>Irina Shaporova</h1>
+                <div class="line"></div>   
+            </div>
+        </section>
+    </main>
     
     <footer>
         <div class="footer">
