feat: add section2-contacts

--- a/index.html
+++ b/index.html
@@ -33,7 +33,22 @@
             </div>
         </section>
     </main>
-    
+    <section class="section_2">
+        <div class="contacts" id="info">
+            <div class="title">
+                <h2>Contacts</h2>
+            </div>
+            <div>
+                <ul>
+                    <li> <img src="./img/mail.svg" alt="mail" class="icon"><a href="mailto:ira.shaporova@mail.ru">ira.shaporova@mail.ru</a></li>
+                    <li><img src="./img/discord.svg" alt="discord" class="icon"><a href="https://discordapp.com/users/Iriska#0560">Irina Shaporova</a></li>
+                    <li><img src="./img/telegram.svg" alt="telegram" class="icon"><a href="https://t.me/Shikpchik/">@Shikpchik</a></li>
+                    <li><img src="./img/telephone.svg" alt="telephone" class="icon"><a href="tel: +79513436646">+7 951 343 66 46</a></li>
+                    <li><img src="./img/skype.svg" alt="skype" class="icon"><a href="https://join.skype.com/invite/CmUgo7dkPHRg">irina shaporova</a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
     <footer>
         <div class="footer">
          <div class="date">
