--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
                 </ul>
             </div>
         </div>
+        <div class="languages" id="lang">
+            <div class="title">
+                <h2>Languages</h2>
+            </div>
+            <div class="text">
+            <p>Russian (native)</p>
+            <p>English <br>
+            (level of English is somewhere between B1 Intermediate and
+                <br>B2 Upper Intermediate according to the Common European
+                Framework of Reference,also known as the CEFR)</p>
+            </div>
+        </div>
+        
     </section>
     <footer>
         <div class="footer">
