--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
                 Framework of Reference,also known as the CEFR)</p>
             </div>
         </div>
+        <div class="experience" id="ex">
+            <div class="title">
+                <h2>Experience</h2>
+            </div>
+            <div class="text">
+                <p>No experience in the </p>
+            </div>
+        </div>
         
     </section>
     <footer>
