feat: add block course

--- a/index.html
+++ b/index.html
@@ -68,7 +68,14 @@
                 <p>No experience in the </p>
             </div>
         </div>
-        
+        <div class="course" id="course_1">
+            <div class="title">
+                <h2>Courses</h2>
+            </div>
+            <div class="text">
+            <p><a href="https://rs.school/js-stage0/">The Rolling Scopes (in process)</a></p>
+        </div>
+        </div>
     </section>
     <footer>
         <div class="footer">
