feat: add block skills

--- a/index.html
+++ b/index.html
@@ -76,6 +76,20 @@
             <p><a href="https://rs.school/js-stage0/">The Rolling Scopes (in process)</a></p>
         </div>
         </div>
+        <div class="skills" id="attainments">
+            <div class="title">
+                <h2>Skills</h2>
+            </div>
+            <ul>
+                <li><img src="./img/check.svg" alt="html" class="icon">HTML</li>
+                <li><img src="./img/check.svg" alt="css" class="icon">CSS</li>
+                <li><img src="./img/check.svg" alt="js" class="icon">JavaScript Basic</li>
+                <li><img src="./img/check.svg" alt="git" class="icon">Git</li>
+                <li><img src="./img/check.svg" alt="github" class="icon">GitHub</li>
+                <li><img src="./img/check.svg" alt="vscode" class="icon">VS Code</li>
+            </ul>
+        </div>
+        
     </section>
     <footer>
         <div class="footer">
