feat: add block projects

--- a/index.html
+++ b/index.html
@@ -89,7 +89,15 @@
                 <li><img src="./img/check.svg" alt="vscode" class="icon">VS Code</li>
             </ul>
         </div>
-        
+        <div class="projects" id="pro">
+            <div class="title">
+                <h2>Projects</h2>
+            </div>
+            <ul>
+                <li><a href="https://github.com/Iris-ka23/rsschool-cv/tree/main">RSSCHOOL-CV</a></li>
+                <li><a href="https://rolling-scopes-school.github.io/iris-ka23-JSFEPRESCHOOL2023Q2/library/">Brooklyn Public Library (in process)</a></li>
+            </ul>
+        </div>
     </section>
     <footer>
         <div class="footer">
