feat: add block about

--- a/index.html
+++ b/index.html
@@ -98,6 +98,18 @@
                 <li><a href="https://rolling-scopes-school.github.io/iris-ka23-JSFEPRESCHOOL2023Q2/library/">Brooklyn Public Library (in process)</a></li>
             </ul>
         </div>
+        <div class="about_me" id="about">
+            <div class="title">
+                <h2>About</h2>
+            </div>
+            <div class="text">
+                <p>I`m 23 years old. I started learning programming 3 months ago.<br>
+                    I hope the courses will help me learn a lot of new things and improve my skills.<br>
+                    Goal: to get more knowledge and experience for getting a job, to evolve to senior frontend developer.
+                    I found out about courses "Сodemasters International" from friend.
+                </p>
+                </div>
+        </div>
     </section>
     <footer>
         <div class="footer">
