feat: add block education

--- a/index.html
+++ b/index.html
@@ -110,6 +110,17 @@
                 </p>
                 </div>
         </div>
+        <div class="education" id="educate">
+            <div class="title">
+                <h2>Education</h2>
+            </div>
+            <div class="text">
+                <p>National Research Mordovia State University<br>
+                    Economics Institute<br>
+                    Academic programmes: Economics<br>
+                    Profile 3++: Finance and loans</p>
+            </div>
+        </div>
     </section>
     <footer>
         <div class="footer">
