--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="contanier">
         <section class="section_1">
             <div class="photo">
-                <img src="./img/photo_1.ico" alt="My photo">
+                <img src="../img/photo_1.ico" alt="My photo">
             </div>
             <div class="name">
                 <h1>Irina Shaporova</h1>
@@ -40,11 +40,11 @@
             </div>
             <div>
                 <ul>
-                    <li> <img src="./img/mail.svg" alt="mail" class="icon"><a href="mailto:ira.shaporova@mail.ru">ira.shaporova@mail.ru</a></li>
-                    <li><img src="./img/discord.svg" alt="discord" class="icon"><a href="https://discordapp.com/users/Iriska#0560">Irina Shaporova</a></li>
-                    <li><img src="./img/telegram.svg" alt="telegram" class="icon"><a href="https://t.me/Shikpchik/">@Shikpchik</a></li>
-                    <li><img src="./img/telephone.svg" alt="telephone" class="icon"><a href="tel: +79513436646">+7 951 343 66 46</a></li>
-                    <li><img src="./img/skype.svg" alt="skype" class="icon"><a href="https://join.skype.com/invite/CmUgo7dkPHRg">irina shaporova</a></li>
+                    <li> <img src="../img/mail.svg" alt="mail" class="icon"><a href="mailto:ira.shaporova@mail.ru">ira.shaporova@mail.ru</a></li>
+                    <li><img src="../img/discord.svg" alt="discord" class="icon"><a href="https://discordapp.com/users/Iriska#0560">Irina Shaporova</a></li>
+                    <li><img src="../img/telegram.svg" alt="telegram" class="icon"><a href="https://t.me/Shikpchik/">@Shikpchik</a></li>
+                    <li><img src="../img/telephone.svg" alt="telephone" class="icon"><a href="tel: +79513436646">+7 951 343 66 46</a></li>
+                    <li><img src="../img/skype.svg" alt="skype" class="icon"><a href="https://join.skype.com/invite/CmUgo7dkPHRg">irina shaporova</a></li>
                 </ul>
             </div>
         </div>
