--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
                 <h2>Skills</h2>
             </div>
             <ul>
-                <li><img src="./img/check.svg" alt="html" class="icon">HTML</li>
-                <li><img src="./img/check.svg" alt="css" class="icon">CSS</li>
-                <li><img src="./img/check.svg" alt="js" class="icon">JavaScript Basic</li>
-                <li><img src="./img/check.svg" alt="git" class="icon">Git</li>
-                <li><img src="./img/check.svg" alt="github" class="icon">GitHub</li>
-                <li><img src="./img/check.svg" alt="vscode" class="icon">VS Code</li>
+                <li><img src="../img/check.svg" alt="html" class="icon">HTML</li>
+                <li><img src="../img/check.svg" alt="css" class="icon">CSS</li>
+                <li><img src="../img/check.svg" alt="js" class="icon">JavaScript Basic</li>
+                <li><img src="../img/check.svg" alt="git" class="icon">Git</li>
+                <li><img src="../img/check.svg" alt="github" class="icon">GitHub</li>
+                <li><img src="../img/check.svg" alt="vscode" class="icon">VS Code</li>
             </ul>
         </div>
         <div class="projects" id="pro">
@@ -132,7 +132,7 @@
           <p>Irina Shaporova</p>
          </div>
          <div class="link">
-          <p><img src="img/github.svg" alt="github" class="icon"><a href="https://github.com/Iris-ka23">My github</a></p>
+          <p><img src="../img/github.svg" alt="github" class="icon"><a href="https://github.com/Iris-ka23">My github</a></p>
          </div>
         </div>
     </footer>
