--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
                 <li> <a href="#pro">Projects</a></li>
             </ul>
         </nav>
+        <div class="burger-menu active">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </header>
 
     <main class="contanier">
