--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
                 <li> <a href="#pro">Projects</a></li>
             </ul>
         </nav>
-        <div class="burger-menu active">
-            <span></span>
-            <span></span>
+        <div class="burger">
             <span></span>
         </div>
     </header>
@@ -71,7 +69,7 @@
                 <h2>Experience</h2>
             </div>
             <div class="text">
-                <p>No experience in the </p>
+                <p>I have no work experience in an IT company </p>
             </div>
         </div>
         <div class="course" id="course_1">
@@ -110,8 +108,8 @@
             </div>
             <div class="text">
                 <p>I`m 23 years old. I started learning programming 3 months ago.<br>
-                    I hope the courses will help me learn a lot of new things and improve my skills.<br>
-                    Goal: to get more knowledge and experience for getting a job, to evolve to senior frontend developer.
+                    I hope the courses will help me to learn a lot of new things and improve my skills.<br>
+                  <b>My Goal:</b>  to get more knowledge and experience for getting a job, to evolve to senior frontend developer.
                     I found out about courses "Сodemasters International" from friend.
                 </p>
                 </div>
