--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="../" type="image/x-icon">
+    <link rel="icon" href="../CodeMasters/img/favicon (1).ico" type="image/x-icon">
     <title>Resume</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
     <main class="contanier">
         <section class="section_1">
             <div class="photo">
-                <img src="../img/photo_1.ico" alt="My photo">
+                <img src="../CodeMasters/img/photo_1.ico" alt="My photo">
             </div>
             <div class="name">
                 <h1>Irina Shaporova</h1>
@@ -44,11 +44,11 @@
             </div>
             <div>
                 <ul>
-                    <li> <img src="../img/mail.svg" alt="mail" class="icon"><a href="mailto:ira.shaporova@mail.ru">ira.shaporova@mail.ru</a></li>
-                    <li><img src="../img/discord.svg" alt="discord" class="icon"><a href="https://discordapp.com/users/Iriska#0560">Irina Shaporova</a></li>
-                    <li><img src="../img/telegram.svg" alt="telegram" class="icon"><a href="https://t.me/Shikpchik/">@Shikpchik</a></li>
-                    <li><img src="../img/telephone.svg" alt="telephone" class="icon"><a href="tel: +79513436646">+7 951 343 66 46</a></li>
-                    <li><img src="../img/skype.svg" alt="skype" class="icon"><a href="https://join.skype.com/invite/CmUgo7dkPHRg">irina shaporova</a></li>
+                    <li> <img src="../CodeMasters/img/mail.svg" alt="mail" class="icon"><a href="mailto:ira.shaporova@mail.ru">ira.shaporova@mail.ru</a></li>
+                    <li><img src="../CodeMasters/img/discord.svg" alt="discord" class="icon"><a href="https://discordapp.com/users/Iriska#0560">Irina Shaporova</a></li>
+                    <li><img src="../CodeMasters/img/telegram.svg" alt="telegram"class="icon"><a href="https://t.me/Shikpchik/">@Shikpchik</a></li>
+                    <li><img src="../CodeMasters/img/telephone.svg" alt="telephone" class="icon"><a href="tel: +79513436646">+7 951 343 66 46</a></li>
+                    <li><img src="../CodeMasters/img/skype.svg" alt="skype" class="icon"><a href="https://join.skype.com/invite/CmUgo7dkPHRg">irina shaporova</a></li>
                 </ul>
             </div>
         </div>
@@ -85,12 +85,12 @@
                 <h2>Skills</h2>
             </div>
             <ul>
-                <li><img src="../img/check.svg" alt="html" class="icon">HTML</li>
-                <li><img src="../img/check.svg" alt="css" class="icon">CSS</li>
-                <li><img src="../img/check.svg" alt="js" class="icon">JavaScript Basic</li>
-                <li><img src="../img/check.svg" alt="git" class="icon">Git</li>
-                <li><img src="../img/check.svg" alt="github" class="icon">GitHub</li>
-                <li><img src="../img/check.svg" alt="vscode" class="icon">VS Code</li>
+                <li><img src="../CodeMasters/img/check.svg" alt="html" class="icon">HTML</li>
+                <li><img src="../CodeMasters/img/check.svg" alt="css" class="icon">CSS</li>
+                <li><img src="../CodeMasters/img/check.svg" alt="js" class="icon">JavaScript Basic</li>
+                <li><img src="../CodeMasters/img/check.svg" alt="git" class="icon">Git</li>
+                <li><img src="../CodeMasters/img/check.svg" alt="github" class="icon">GitHub</li>
+                <li><img src="../CodeMasters/img/check.svg" alt="vscode" class="icon">VS Code</li>
             </ul>
         </div>
         <div class="projects" id="pro">
@@ -136,7 +136,7 @@
           <p>Irina Shaporova</p>
          </div>
          <div class="link">
-          <p><img src="../img/github.svg" alt="github" class="icon"><a href="https://github.com/Iris-ka23">My github</a></p>
+          <p><img src="../CodeMasters/img/github.svg" alt="github" class="icon"><a href="https://github.com/Iris-ka23">My github</a></p>
          </div>
         </div>
     </footer>
